--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=text-vectorization
 
 
 spring.elasticsearch.uris=https://localhost:9200
-spring.elasticsearch.username=elastic
-spring.elasticsearch.password=3bK*WYer9x*QJvXmV7IY
+spring.elasticsearch.username=elastic_username
+spring.elasticsearch.password=elastic_password
 
 server.ssl.stream=https
 server.ssl.host=localhost
 server.ssl.port=9200
-server.ssl.username=elastic
-server.ssl.keystore.password=dinesh
+server.ssl.username=ssl_username
+server.ssl.keystore.password=ssl_password
 server.ssl.keystore.path=src/main/resources/truststore.jks
